@@ -1,6 +1,6 @@
 
 /*
- * $Id: queryStatement.c,v 1.12 2007/03/06 16:02:58 mihajlov Exp $
+ * $Id: queryStatement.c,v 1.13 2007/05/02 13:53:23 sschuetz Exp $
  *
  * © Copyright IBM Corp. 2005, 2007
  *
@@ -151,26 +151,21 @@ static int qsTestPropertyClass(QLStatement *st, char *cl)
    return 0;
 }
 
-static void freeCharArray(char ** arr)
-{
-   int i=0;
-   if(arr) {
-      while(arr[i]) {
-         free(arr[i++]);
-      }
-      free(arr);
-   }
-}
-
 static void qsRelease(QLStatement *st)
 {
-  if (st->allocMode != MEM_TRACKED) {
-    freeCharArray(st->fClasses);
-    freeCharArray(st->spNames);
-    if (st->allocList) free(st->allocList);
-    if (st->sns) free(st->sns);
-    if (st) free(st);
-  }
+    if (st && st->allocMode != MEM_TRACKED) {
+    	if(st->sns) {
+    	    free(st->sns);
+    	}
+    	/* free everything but the first element of allocList, which is
+    	 * the memory allocated for the QLStatement itself, see
+    	 * newQLStatement(...). The struct is then freed after the loop */
+        while(st->allocNext > 1) {
+            free(st->allocList[--st->allocNext]);
+        }
+        free(st->allocList);
+        free(st);
+    }
 }
 
 static CMPIInstance* qsCloneAndFilter(QLStatement *st, CMPIInstance *ci, CMPIObjectPath *cop, 
